# The-Magnisifint-7_COS214

./: .gitignore  COS214 Group Project.docx  README.md  Todo.txt  wREADME.md
214Project/: Bell.cpp  Bell.h  BuildStrategy.cpp  BuildStrategy.h  CMakeLists.txt  Command.cpp  Command.h  CrewDragon.h  Engine.cpp  Engine.h  EngineFactory.h  Falcon9TS.cpp  Falcon9TS.h  FalconBuilder.cpp  FalconBuilder.h  FalconHeavy.cpp  FalconHeavy.h  FalconHeavyBuilder.cpp  FalconHeavyBuilder.h  FalconHeavyTS.cpp  FalconHeavyTS.h  FullStackBuildStrategy.cpp  FullStackBuildStrategy.h  Invoker.cpp  Invoker.h  Iterator.h  LaunchCommand.cpp  LaunchCommand.h  LinkedList.cpp  LinkedList.h  LoadFuelCommand.cpp  Main.cpp  MerlinEngine.h  MerlinEngineFactory.cpp  MerlinEngineFactory.h  MerlinFactory.h  MotorFactory.cpp  MotorFactory.h  Payload.cpp  Payload.h  (+38 more)
Data/Final Design/: com.vpp.bak_000f  comDia.vpp.bak_000f
Data/Initial Design/: 214 Project.docx
Planning/: COS214 Group Project.docx  Magnifisint7_Report.docx  Todo.txt
Planning/Damian/: COS 214 Group Project.vpp
Planning/Final/: Final.txt
Planning/Keelan/: Project.vpp
ignore/: CMakeLists.txt
ignore/V1/: Bell.cpp  Bell.h  BrokenState.cpp  BrokenState.h  BuildStrategy.h  CMakeLists.txt  CargoDragon.h  Command.h  (+59 more)
src/: CMakeLists.txt  changeLog.txt
src/V1/: Bell.cpp  Bell.h  BrokenState.cpp  BrokenState.h  BuildStrategy.cpp  BuildStrategy.h  CargoDragon.cpp  CargoDragon.h  Command.cpp  Command.h  ControlCenter.cpp  ControlCenter.h  CrewDragon.cpp  CrewDragon.h  Dragon.cpp  Dragon.h  Engine.cpp  Engine.h  EngineFactory.cpp  EngineFactory.h  Falcon9TS.h  FalconBuilder.cpp  FalconBuilder.h  FalconHeavy.cpp  FalconHeavy.h  FalconHeavyBuilder.cpp  FalconHeavyBuilder.h  FalconHeavyTS.cpp  FalconHeavyTS.h  FullStackBuildStrategy.cpp  FullStackBuildStrategy.h  Invoker.cpp  Invoker.h  Iterator.cpp  Iterator.h  LaunchCommand.cpp  LaunchCommand.h  LinkedList.cpp  LinkedList.h  LoadFuelCommand.cpp  (+59 more)
(+9 files in other folders)
